--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.6",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
     "express": "^4.18.2",
+    "ng-event-bus": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
